# localrag-v2

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: main.py
api/routes/: chat.py  documents.py  health.py  jobs.py  rag.py
core/: background_workers.py  chat.py  config.py  database.py  enhanced_ocr.py  graph_optimizer.py  indonesian_kg_manager.py  ingestion.py  job_manager.py  llm_service.py  logging.py  models.py  models_orm.py  postgres_storage.py  rag.py  semantic_analyzer.py  task_queue.py
docs/: API.md  BACKGROUND_PROCESSING.md  CHAT.md  CONFIG.md  INDONESIAN_PROCESSING.md  LLM_FREE_USAGE.md  LLM_INTEGRATION.md  MIGRATION.md  NEO4J_MIGRATION_GUIDE.md  OCR_CONFIGURATION.md  SETUP.md
migrations/: 001_initial_schema.sql  002_job_tracking_schema.sql  003_fix_processing_jobs_schema.sql  004_chat_threading.sql  005_fix_job_status_constraint.sql  006_foundation.cypher
migrations/rollback/: 001_cleansing.sql  002_cleansing.cypher  003_rollback.cypher
prompts/: README.md  asisten_penelitian_id.txt  asisten_perusahaan_id.txt  asisten_rag_umum_id.txt  asisten_sederhana_id.txt  asisten_teknis_id.txt  general_rag_assistant.txt  simple_assistant.txt  technical_assistant.txt
utils/: download_ocr_models.py  migrate.py  neo4j_migrate.py  postgres_migrate.py  setup_ocr.py
